--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Bill Splitter Application</title>
+    <title>JavaScript Inventory Management Application</title>
 </head>
 <body>
     <h1>Inventory Management System Application</h1>
